# ExaGeoStatCPP

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DESCRIPTION  ExaGeoStatCPPConfig.cmake.in  FullPipeline.sh  Jenkinsfile  LICENSE  NAMESPACE  README.md  USER_MANUAL.md  _bivariate_matern_flexible_8cpp.html  _bivariate_matern_flexible_8cpp_source.html  _bivariate_matern_flexible_8hpp.html  _bivariate_matern_flexible_8hpp_source.html  _bivariate_matern_parsimonious_8cpp.html  _bivariate_matern_parsimonious_8cpp_source.html  _bivariate_matern_parsimonious_8hpp.html  _bivariate_matern_parsimonious_8hpp_source.html  _bivariate_spacetime_matern_stationary_8cpp.html  _bivariate_spacetime_matern_stationary_8cpp_source.html  _bivariate_spacetime_matern_stationary_8hpp.html  _bivariate_spacetime_matern_stationary_8hpp_source.html  _c_s_v_data_generator_8cpp.html  _c_s_v_data_generator_8cpp_source.html  _c_s_v_data_generator_8hpp.html  _c_s_v_data_generator_8hpp_source.html  _chameleon_descriptor_8cpp.html  _chameleon_descriptor_8cpp_source.html  _chameleon_descriptor_8hpp.html  _chameleon_descriptor_8hpp_source.html  _chameleon_headers_8hpp.html  _chameleon_headers_8hpp_source.html  _chameleon_implementation_8cpp.html  _chameleon_implementation_8cpp_source.html  _chameleon_implementation_8hpp.html  _chameleon_implementation_8hpp_source.html  _chameleon_implementation_d_s_t_8cpp.html  (+527 more)
R/: ExaGeoStatCPP.R
examples/: CMakeLists.txt
examples/climate-emulator/: CMakeLists.txt  ClimateEmulator.cpp
examples/configurations/: CMakeLists.txt  ConfigurationModule.cpp  ConfigurationsMain.cpp  RunningWithDifferentConfigurations.cpp  SetupConfigurations.cpp
examples/configurations/data-generation/: CMakeLists.txt  SyntheticData.cpp  main.cpp  main_synthetic.cpp
examples/data-generators/: CMakeLists.txt  SyntheticDataGeneration.cpp  SyntheticData_main.cpp  SyntheticGenerator.cpp  SyntheticLocationsGeneration.cpp
examples/data-loader/: CMakeLists.txt  CSVLoader.cpp
examples/data-units/: CMakeLists.txt  ExaGeoStatDescriptorMain.cpp
examples/descriptors/: CMakeLists.txt  ChameleonDescriptor.cpp  ChameleonToHicmaConverter.cpp  HicmaDescriptor.cpp
examples/end-to-end/: CMakeLists.txt  DataGeneration.cpp  DataGenerationAndModeling.cpp  DataGenerationAndPrediction.cpp  DataGenerationModelingAndPrediction.cpp  DataModeling.cpp  DataPrediction.cpp
examples/hardware/: CMakeLists.txt  ExaGeoStatHardware.cpp
examples/kernels/: CMakeLists.txt  Kernels_main.cpp
examples/linear-algebra-solvers/: AllocateDescriptors_main.cpp  CMakeLists.txt  ChameleonAllocateDescriptors_main.cpp
examples/linear-algebra-solvers/dense/: ChameleonAllocateDescriptors_main.cpp
examples/mean-trend-removal/: CMakeLists.txt  MeanTrendRemoval.cpp
examples/stage-zero/: CMakeLists.txt  StageZeroDataGenerator.cpp
src/: CMakeLists.txt  DataTypeModule.cpp  Makefile  README.md  RcppExports.cpp
src/Rcpp-adapters/: CMakeLists.txt  FunctionsAdapter.cpp  RcppExports.cpp  RcppModules.cpp
src/adapters/: CMakeLists.txt
src/api/: CMakeLists.txt  ClimateEmulator.cpp  ExaGeoStat.cpp
src/configurations/: CMakeLists.txt  Configurations.cpp  Parser.cpp  Validator.cpp
src/configurations/data-generation/: CMakeLists.txt  DataConfigurations.cpp
src/configurations/data-modeling/: DataModelingConfigurations.cpp
src/data-analyzer/: CMakeLists.txt  DataAnalyzer.cpp
src/data-generators/: CMakeLists.txt  DataGenerationFactory.cpp  DataGenerator.cpp  LocationGenerator.cpp
src/data-generators/concrete/: CMakeLists.txt  CSVDataGenerator.cpp  MeanTrendRemovalGenerator.cpp  MeanTrendRemovalGeneratorParsec.cpp  StageZeroGenerator.cpp  StageZeroGeneratorParsec.cpp  SyntheticGenerator.cpp
src/data-loader/: CMakeLists.txt  DataLoader.cpp
src/data-loader/concrete/: CMakeLists.txt  CSVLoader.cpp  ParsecLoader.cpp
src/data-transformer/: CMakeLists.txt  DataTransformer.cpp
src/data-units/: CMakeLists.txt  DescriptorData.cpp  ExaGeoStatData.cpp  ExaGeoStatDescriptor.cpp  Kernels.cpp  Locations.cpp
src/data-units/descriptor/: CMakeLists.txt  ExaGeoStatDescriptor.cpp
src/hardware/: CMakeLists.txt  ExaGeoStatHardware.cpp
src/helpers/: BasselFunction.cpp  ByteHandler.cpp  CMakeLists.txt  CommunicatorMPI.cpp  DiskWriter.cpp  DistanceCalculationHelpers.cpp
src/kernels/: CMakeLists.txt  Kernel.cpp  UnivariateMaternStationary.cpp
src/kernels/concrete/: BivariateMaternFlexible.cpp  BivariateMaternParsimonious.cpp  BivariateSpacetimeMaternStationary.cpp  TrendModel.cpp  TrivariateMaternParsimonious.cpp  UnivariateExpNonGaussian.cpp  UnivariateMaternDbeta.cpp  UnivariateMaternDdbetaBeta.cpp  UnivariateMaternDdbetaNu.cpp  UnivariateMaternDdnuNu.cpp  UnivariateMaternDdsigmaSquare.cpp  UnivariateMaternDdsigmaSquareBeta.cpp  UnivariateMaternDdsigmaSquareNu.cpp  UnivariateMaternDnu.cpp  UnivariateMaternDsigmaSquare.cpp  UnivariateMaternNonGaussian.cpp  UnivariateMaternNonStat.cpp  UnivariateMaternNonStationary.cpp  UnivariateMaternNuggetsStationary.cpp  UnivariateMaternStationary.cpp  UnivariatePowExpStationary.cpp  UnivariateSpacetimeMaternStationary.cpp
src/linear-algebra-solvers/: AllocateDescriptors.cpp  CMakeLists.txt  LinearAlgebraFactory.cpp  LinearAlgebraMethods.cpp
src/linear-algebra-solvers/concrete/: CMakeLists.txt
src/operators/: CMakeLists.txt  OperatorFactory.cpp
src/operators/concrete/: MaximumLikelihoodEstimation.cpp
src/prediction/: CMakeLists.txt  Prediction.cpp  PredictionAuxiliaryFunctions.cpp  PredictionHelpers.cpp
src/results/: CMakeLists.txt  Results.cpp
src/runtime/: CMakeLists.txt
src/runtime-solver/: CMakeLists.txt  RuntimeSolverFactory.cpp
src/runtime-solver/concrete/: CMakeLists.txt  ParsecRuntimeSolver.cpp  StarpuRuntimeSolver.cpp
src/runtime/parsec/: CMakeLists.txt  GPUHelperFunctions.c  JDFHelperFunctions.c  JDFKernels.cu  ParsecFunctions.cpp
src/runtime/starpu/: CMakeLists.txt  StarPuFunctions.cpp
tests/cpp-tests/: CMakeLists.txt  README.md  main.cpp  test_main.cpp
tests/heavy-tests/: CMakeLists.txt  ExamplesTests.cpp  HeavyTests.cpp  README.md
(+893 files in other folders)
